# timu

./: AGENTS.md  PRODUCT-RULES.md  README.md
.agents/: hooks.json
.codex/: hooks.json
.github/workflows/: release.yml
.hermes/plans/: 2026-07-12_133252-onboarding-cli-hardening.md
docs/: index.html
docs/design/: agent-child-attention.html  color-schemes.html  command-window.html  inbox.html  lifecycle-and-connection.html  navigation-chrome.html  onboarding.html  session-setup.html
docs/features/: _feature-directory-index-template.md  _feature-template.md  onboarding-cli.md  timu-core.md
docs/infra/: api-contracts.md  decisions.md  deployment.md  patterns.md  schema.md  testing.md
docs/prds/: v0-prd.md
scripts/: on-session-stop.sh
timu-app/: app.json  package-lock.json  package.json
timu-core/: Cargo.toml
timu-core/src/: connection.rs  credentials.rs  error.rs  folder.rs  host_key.rs  lib.rs  profile.rs  readiness.rs  readiness_probe.rs  ssh.rs  ssh_russh.rs  store.rs  timu_core.rs
timu-core/tests/: smoke.rs
timu-npx/: .gitignore  package.json  postinstall.js
timu-npx/test/: launcher.test.js  postinstall.test.js  smoke.test.js
timu-pair/: .gitignore  Cargo.toml
timu-pair/src/: addresses.rs  authorized_keys.rs  cli.rs  error.rs  lib.rs  main.rs  payload.rs  system.rs
timu-pair/tests/: address_selection_flow.rs  authorized_keys.rs  cli_inputs.rs  completion_flow.rs  concurrent_pairing.rs  filesystem_security.rs  fixtures_schema.rs  host_key_fingerprint.rs  pairing_payload.rs  session_cleanup.rs  system_boundaries.rs
web/: index.html
(+27 files in other folders)
