[package]
name = "timu-core"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = "0.62"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"] }

[dev-dependencies]
serde_json = "1"